--- a/views/proprty.ejs
+++ b/views/proprty.ejs
@@ -119,7 +119,7 @@ height:0px;}		</style>
 <li id="menu-item-72" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-home"><a href="#funktioniert"><span>Wie funktioniert’s</span></a></li>
 <li id="menu-item-48" class="menu-item menu-item-type-custom menu-item-object-custom last"><a href="#preis"><span> Preis</span></a></li>
 <li id="menu-item-48" class="menu-item menu-item-type-custom menu-item-object-custom last"><a href="#contact"><span> Kontaktiere Uns</span></a></li>
-</ul></nav><a class="responsive-menu-toggle " href="#"><img src="proprty_files/icona.png"></a>				</div>
+</ul></nav><a class="responsive-menu-toggle " href="#"><img src="https://scontent.fevn5-1.fna.fbcdn.net/v/t1.15752-9/56902483_791324331245598_4783039652871274496_n.png?_nc_cat=107&_nc_ht=scontent.fevn5-1.fna&oh=635ba083e1fd59f986c65912b04b7feb&oe=5D350705"></a>				</div>
 
 				<div class="secondary_menu_wrapper">
 					<!-- #secondary-menu -->
@@ -318,7 +318,7 @@ input[type=submit] {
 
 </div><!-- #Wrapper -->
 
-<div id="Side_slide" class="right dark" data-width="250"><div class="close-wrapper"><a href="http://proprty.at/index.php/about-us/#" class="close"><img src="proprty_files/iconb.png"></a></div><div class="extras"><div class="extras-wrapper"></div></div><div class="lang-wrapper"></div><div class="menu_wrapper"></div></div><div id="body_overlay"></div>
+<div id="Side_slide" class="right dark" data-width="250"><div class="close-wrapper"><a href="http://proprty.at/index.php/about-us/#" class="close"><img src="https://scontent.fevn5-1.fna.fbcdn.net/v/t1.15752-9/57154879_391246601480859_8316167101605740544_n.png?_nc_cat=111&_nc_ht=scontent.fevn5-1.fna&oh=583f370d0b000e0ccdbf8ebaeb724e3e&oe=5D458F1B"></a></div><div class="extras"><div class="extras-wrapper"></div></div><div class="lang-wrapper"></div><div class="menu_wrapper"></div></div><div id="body_overlay"></div>
 
 
 <!-- mfn_hook_bottom --><!-- mfn_hook_bottom -->
