--- a/views/proprty.ejs
+++ b/views/proprty.ejs
@@ -2,7 +2,7 @@
 <!-- saved from url=(0037)http://proprty.at/index.php/about-us/ -->
 <html lang="en-US" class="js gr__proprty_at" itemscope="" itemtype="https://schema.org/WebPage"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
-
+<script>console.log("\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n");</script>
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 <link rel="alternate" hreflang="en-US" href="http://proprty.at/index.php/about-us/">
 
